# extremeC

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build_publish.yaml
.github/workflows/: build_publish.yaml
docs/: CMakeLists.txt  Doxyfile.in
include/: helpers.h
src/: 0000_0_getopt.c  0000_1_getopt_long.c  0000_getopt.c  0001_0_error_handling.c  0002_0_uid_gid.c  0003_0_file_directory.c  buffer_overflow.c  c_style_oop.c  cache_friend.c  concurrency.c  function.c  heap.c  heap2.c  helpers.c  preprocessors.c  stack.c  structs.c  variable_pointers.c
